--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <p>correo: edwarsquinte@gmail.com</p>
     <p>cel: 3204464944</p>
     <br>direccion: calle 2 # 08-23 sur</br>
+
+<h2>fase del proyecto</h2>
+<a href="fase2/desing.html">fase2</a>
+
 </body>
 </html>
